--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
       <div class="left">
         <h1>Vamos comprar um pouco de <span>AsmrGraph</span></h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt,
-          facilis earum assumenda suscipit officia quisquam dignissimos.
+          Experimente uma nova dimensão visual com AsmrGraph.
         </p>
         <a href="#">
           <i class="bx bx-basket"></i>
-          <span>Buy Now</span>
+          <span>Compre agora</span>
         </a>
       </div>
       <img src="assets/header.png" alt="" />
@@ -50,8 +49,7 @@
           <h5>Venda seus NFTs</h5>
         </div>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt,
-          facilis earum assumenda suscipit officia quisquam dignissimos.
+          Crie, liste e monetize suas artes digitais com segurança e autonomia. Nossa plataforma facilita a tokenização e venda de NFTs sem complicações.
         </p>
       </div>
       <div class="item">
@@ -60,8 +58,7 @@
           <h5>NFT Marketplace</h5>
         </div>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt,
-          facilis earum assumenda suscipit officia quisquam dignissimos.
+          Explore um marketplace descentralizado com suporte a múltiplas carteiras. Compre, venda ou negocie colecionáveis digitais de forma transparente e rápida.
         </p>
       </div>
       <div class="item">
@@ -70,8 +67,7 @@
           <h5>Inicie DApps</h5>
         </div>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt,
-          facilis earum assumenda suscipit officia quisquam dignissimos.
+          Lançe seus próprios aplicativos descentralizados usando contratos inteligentes prontos para integração com Ethereum ou outras redes compatíveis.
         </p>
       </div>
     </div>
